# reportlab_sandbox

./: main.py  pyproject.toml
src/: __init__.py  pdf_builder.py
src/components/: gauge_card_list.py  header.py  icon_card_list.py  list.py  score.py  table.py
src/enums/: Colors.py  Poppins.py  Spacing.py  SvgPath.py  __init__.py
src/primitives/: gauge_card.py  gauge_card_group.py  gauge_card_list.py  icon.py  icon_card.py  icon_card_list.py  list.py  score_chart.py  score_text.py  table.py  title.py
src/styles/: stylesheet.py
src/templates/: __init__.py
src/templates/analise_credito/: __init__.py
src/templates/analise_credito/pj/: __init__.py  relatorio_positivo.py
src/types/: __init__.py  list.py  misc.py  score.py
src/types/components/: __init__.py  gauge_card.py  icon_card.py  list.py  table.py
