[tool.poetry]
name = "reportlab-sandbox"
version = "0.1.0"
description = ""
authors = ["Guilherme Faga <guilherme.galletti@targetdata.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
reportlab = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
